--- a/crawler/build.gradle
+++ b/crawler/build.gradle
@@ -6,13 +6,15 @@ buildscript {
         }
     }
     dependencies {
-        
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 
 repositories    {
@@ -34,6 +36,12 @@ targetCompatibility = 1.8
 
 dependencies {
     compile group: 'edu.uci.ics', name: 'crawler4j', version: '4.4.0'
+
+    compile group: 'javax.persistence', name: 'persistence-api', version: '1.0'
+
+    compile 'org.springframework.boot:spring-boot-starter-data-redis'  
+
+    compile("org.springframework.boot:spring-boot-starter-web")
 
     // Use MySQL Connector-J
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
